--- a/styles/style.css
+++ b/styles/style.css
@@ -4,30 +4,41 @@
   background-color: #fafbfe;
   font-family: monospace;
 }
+
+/* css grid classes */
 div.container {
   width: 100%;
   background: lightgray;
   display: grid;
   grid-template-columns: 1fr 200px;
-  grid-gap: 5px 3px;/* vertical horizontal */                 }                                                             div.grid-div {                                                  color: #173794;                                               background-color: #eaebee;                                    padding: 8px;
+  grid-gap: 5px 3px; /* vertical lines, horizontal lines */
 }
 div.band-calendar {
   width: 100%;
   background: #124567;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 5px 3px;
+  grid-gap: 2px 3px;
 }
 div.set-list {
   width: 100%;
   background: #004567;
   display: grid;
   grid-template-columns: 4fr 1fr;
-  grid-gap: 3px 2px;
+  grid-gap: 1px 2px;
 }
 
-/* non-grid */
+/* classes not related to css grid */
 div.accent-div {
   background-color: #eae3de;
-  padding: 8px;                                                 border-radius: 5px;                                         
+  padding: 8px;
+  border-radius: 5px;                                         
 }
+
+
+
+
+
+
+
+
