--- a/styles/style.css
+++ b/styles/style.css
@@ -9,10 +9,11 @@
 div.container {
   width: 100%;
   background: lightgray;
-  display: grid;
+/*  display: grid;
   grid-template-columns: 7fr 4fr;
-  grid-gap: 5px 3px; /* vertical lines, horizontal lines */
-/* 
+  grid-gap: 5px 3px;*/
+	/* vertical lines, horizontal lines */
+  /* 
  * a vertical line is a horizontal gap,
  * and a horizontal line is a vertical gap, so 
  * in that sense this follows the convention of
@@ -20,19 +21,21 @@ div.container {
  *
  * */
 }
+
 div.band-calendar {
   width: 100%;
   background: #124567;
-  display: grid;
+/*  display: grid;
   grid-template-columns: 2fr 5fr;
-  grid-gap: 2px 3px;
+  grid-gap: 2px 3px;*/
 }
+
 div.set-list {
   width: 100%;
   background: #004567;
-  display: grid;
+/*  display: grid;
   grid-template-columns: 4fr 1fr;
-  grid-gap: 1px 2px;
+  grid-gap: 1px 2px;*/
 }
 
 
