--- a/styles/style.css
+++ b/styles/style.css
@@ -33,9 +33,9 @@ div.band-calendar {
 div.set-list {
   width: 100%;
   background: #004567;
-/*  display: grid;
+  display: grid;
   grid-template-columns: 4fr 1fr;
-  grid-gap: 1px 2px;*/
+  grid-gap: 1px 2px;
 }
 
 
