--- a/styles/style.css
+++ b/styles/style.css
@@ -25,9 +25,9 @@ div.container {
 div.band-calendar {
   width: 100%;
   background: #124567;
-/*  display: grid;
+  display: grid;
   grid-template-columns: 2fr 5fr;
-  grid-gap: 2px 3px;*/
+  grid-gap: 2px 3px;
 }
 
 div.set-list {
