--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,11 @@ div.band-calendar {
   display: grid;
   grid-template-columns: 2fr 5fr;
   grid-gap: 2px 3px;
+  border: 2px solid #33aabb;
+}
+
+div.band-calendar div {
+  padding: 3px;
 }
 
 div.band-calendar ul {
